--- a/index.html
+++ b/index.html
@@ -1,10 +1,120 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Reilly's Schedule</title>
     </head>
     
     <body>
-	
+      <h1> Reilly class schedule</h1>
+        <h3> A week</h3>
+          <table border="3">
+            <tr>
+              <th>period</th>
+              <th>monday</th>
+              <th>tuesday</th>
+              <th>wednesday</th>
+              <th>thursday</th>
+              <th>friday</h>
+            </tr>
+            <tr>
+              <th>A Block 7:32</th>
+              <td>Study</td>  
+              <td>Study</td>
+              <td>Study</td>
+              <td>Study</td>
+              <td>Study</td>
+            </tr>
+            <tr>
+              <th>B Block 8:38</th>
+              <td>gym</td>
+              <td>gym</td>
+              <td>alternates</td>
+              <td>health</td>
+              <td>health</td>
+            </tr>
+            <tr>
+              <th>C Block 10:20</th>
+              <td>history</td>
+              <td>history</td>
+              <td>history</td>
+              <td>history</td>
+              <td>history</td>
+            </tr>
+            <tr>
+              <th>D BLock 10:35</th>
+              <td>biology</td>
+              <td>biology</td>
+              <td>biology</td>
+              <td>biology</td>
+              <td>biology</td>
+            </tr>
+            <tr>
+              <th>E Block 11:00
+              <td>ELA</td>
+              <td>ELA</td>
+              <td>ELA</td>
+              <td>ELA</td>
+              <td>ELA</td>
+            </tr>
+            <tr>
+              <th>F Block 11:45</th>
+              <td>Math</td>
+              <td>Math</td>
+              <td>Math</td>
+              <td>Math</td>
+              <td>Math</td>
+            </tr>
+            <tr>
+              <th>Lunch 12:15</th>
+            </tr>
+          </table>
+        <h3> B week</h3>
+  
+          <table border="3">
+          <tr>
+            <th>period</th>
+            <th>monday</th>
+            <th>tuesday</th>
+            <th>wednesday</th>
+            <th>thursday</th>
+            <th>friday</h>
+          </tr>
+          <tr>
+            <th>A Block 7:32</th>
+            <td>programing and web<br></td>  
+            <td>programing and web</td>
+            <td>programing and web</td>
+            <td>programing and web</td>
+            <td>programing and web</td>
+          </tr>
+  
+          <tr>
+            <th>D BLock 10:35</th>
+            <td>biology</td>
+            <td>biology</td>
+            <td>biology</td>
+            <td>biology</td>
+            <td>biology</td>
+          </tr>
+          <tr>
+            <th>E Block 11:00
+            <td>ELA</td>
+            <td>ELA</td>
+            <td>ELA</td>
+            <td>ELA</td>
+            <td>ELA</td>
+          </tr>
+          <tr>
+            <th>F Block 11:45</th>
+            <td>Math</td>
+            <td>Math</td>
+            <td>Math</td>
+            <td>Math</td>
+            <td>Math</td>
+          </tr>
+          <tr>
+            <th>Lunch 12:15</th>
+          </tr>
+        </table>
     </body>
 </html>
